style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;500&display=swap');

:root {
    --background-color: #000000;
    --background-color-transparent: #000000d9;
    --foreground-color: #ffffff;
    --accent-color: #add8e6;
    --full-transparent: #00000000;
}

body{
    font-family: 'Roboto Mono', monospace;
    font-weight: 200;
    background-color: var(--background-color);
    width: 100%;
    height: 100%;
    margin: 0px;
    transition: background-color 1s, color 0.5s;
}

h1 {
    font-weight: 200;
}
h2 {
    font-weight: 200;
    font-style: italic;
}

a {
    color: var(--foreground-color);

}

a:active {
    background: var(--accent-color);
    color: var(--foreground-color);
}

a:hover {
    color: var(--background-color);
    background: var(--foreground-color);
    text-decoration: none;
    
}

.mapContainer {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /* background-color: black; */
    color: var(--foreground-color);
    text-align: center;
    overflow: hidden;
}

.mapContainer .theme {
    display: block;
    position: fixed;
    top: -5px;
    right: 12px;
    cursor: pointer;
}

.mapContainer .theme p {
    margin: 0px;
    font-size: 3em;
}

.mapContainer .wb-logo {
    display: block;
    position: fixed;
    top: -5px;
    left: 12px;
}

.contentContainer {
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 10%;
    min-height: 100px;
    text-align: center;
    border-top: 2px solid var(--foreground-color);
    box-sizing: border-box;
    background-color: var(--background-color-transparent);
    color: var(--foreground-color);
    transition: height 0.5s, background-color 1s, color 0.5s;
    overflow: hidden;
}

.contentContainer iframe{
    display: block;
    position: relative;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    border: 0px;
    
}

.contentIcon {
    display: block;
    position: fixed;
    width: 70px;
    height: 70px;
    margin-top: 10px;
    right: calc(50% - 35px);
    padding: 10px;
    transition: border 1s;
    box-sizing: border-box;
    border: 2px solid var(--background-color);
    border-radius: 100px;
    z-index: 100;
    /* cursor: pointer; */
}


.contentIcon:hover{
    transition: transform 0.5s;
    cursor: pointer;
    border: 2px solid var(--foreground-color);
    
}

.contentIcon h1{
    margin: 0px;
    transition: transform 0.5s;
}

.programNotes {
    display: block;
    position: absolute;
    top: 90px;
    left: 0;
    width: 100%;
    height: 100%;
    color: var(--foreground-color);
    text-align: center;
}

.videoWrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}
.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

.programNotesInner {
    display: block;
    position: relative;
    max-width: 60%;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

.canvasParent {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    z-index: -100;
}

::-webkit-scrollbar {
    background-color: var(--background-color-transparent);
}

@media only screen and (max-width: 720px){
    .videoWrapper {
        max-width: 100%;
    }

    .programNotesInner {
        max-width: 95%;
    }
}

